language/move-lang/tests/move_check/expansion/weird_apply_assign.exp
error: 

   ┌── tests/move_check/expansion/weird_apply_assign.move:7:11 ───
   │
 7 │         S f = S { f: 0 };
   │           - Expected ';'
   │           ^ Unexpected 'f'
   │

